--- a/html/feminino.html
+++ b/html/feminino.html
@@ -76,7 +76,7 @@
   <main>
     <section>
       <div class="container">
-         <h2 class="text-center mt-4">As marcas que as <span>brasileiras</span> amammm!</h2>
+         <h2 class="text-center mt-4 text">As marcas que as <span>brasileiras</span> amammm!</h2>
          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -86,7 +86,7 @@
                 <img src="../images/shein.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/Carmen-steffens.png" class="d-block w-100" alt="...">
+                <img src="../images/car.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -102,28 +102,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Shein</h1>
+            <h1 class="text-center mt-5 text">Shein</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/fem1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa Verde de Algodão</p>
                     <p class="text-center">R$ 45,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/femi2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto estiloso</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/femin3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Anitta</p>
                     <p class="text-center">R$ 109,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/feni4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa Borboleta</p>
                     <p class="text-center">R$ 29,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/femi5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Calça Branca desenhada</p>
                     <p class="text-center">R$ 69,90</p>
@@ -135,28 +135,28 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">C&A</h1>
+            <h1 class="text-center mt-5 text">Morena Rosa</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/c1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Lilás</p>
                     <p class="text-center">R$ 99,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/c2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Verde limão</p>
                     <p class="text-center">R$ 109,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/c3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Peróla</p>
                     <p class="text-center">R$ 159,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/c4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Body/Maiô Jade Picon</p>
                     <p class="text-center">R$ 59,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/c5 (cópia 1).jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Macacão Jeans</p>
                     <p class="text-center">R$ 69,90</p>
@@ -167,28 +167,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Carmen Steffens</h1>
+            <h1 class="text-center mt-5 text">Carmen Steffens</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/carmen1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Preto</p>
                     <p class="text-center">R$ 199,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/carmen2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Sandália Salto 15</p>
                     <p class="text-center">R$ 115,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/carmen3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit bolsa + Carteira</p>
                     <p class="text-center">R$ 359,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/carmen4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Calça com corrente</p>
                     <p class="text-center">R$ 499,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/carmen5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa branca</p>
                     <p class="text-center">R$ 129,90</p>
