--- a/html/historico.html
+++ b/html/historico.html
@@ -76,7 +76,7 @@
   <main>
     <section>
       <div class="container">
-        <h6 class="text-center mt-3">Olá, Jales!</h6>
+        <h6 class="text-center mt-3 text">Olá, Jales!</h6>
         <p class="text-center">Essas foram as compras que você realizou em nossa plataforma nos ultimos meses.</p>
         <div class="row">
           <div class="col-sm-4">
