--- a/html/infantil.html
+++ b/html/infantil.html
@@ -76,7 +76,7 @@
   <main>
     <section>
       <div class="container">
-         <h2 class="text-center mt-4">As marcas que as <span>brasileiras</span> amammm!</h2>
+         <h2 class="text-center mt-4 text">A criançada na moda</h2>
          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -102,28 +102,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Brandilli</h1>
+            <h1 class="text-center mt-5 text">Brandili</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bran1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Ursinho</p>
                     <p class="text-center">R$ 125,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bran2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto borboleta</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bran3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Vestido elefante</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bran4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Praia</p>
                     <p class="text-center">R$ 29,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bran5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa Dinossauro 3D</p>
                     <p class="text-center">R$ 69,90</p>
@@ -135,28 +135,28 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Malvee Kids</h1>
+            <h1 class="text-center mt-5 text">Malvee Kids</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card card">
                     <img src="../images/malve1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa de frio Skye</p>
                     <p class="text-center">R$ 49,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/malve2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa de frio Chase</p>
                     <p class="text-center">R$ 49,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/malve3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa Manga Longa</p>
                     <p class="text-center">R$ 88,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/malve4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Vestido manga longa</p>
                     <p class="text-center">R$ 59,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/malve5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto de frio</p>
                     <p class="text-center">R$ 89,90</p>
@@ -167,28 +167,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Carter Kids</h1>
+            <h1 class="text-center mt-5 text">Carter Kids</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ca1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit 3 peça feminino</p>
                     <p class="text-center">R$ 229,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ca2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Calça e blusa masculino</p>
                     <p class="text-center">R$ 119,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ca3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit 3 peças masculino</p>
                     <p class="text-center">R$ 229,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ca4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit duas calças</p>
                     <p class="text-center">R$ 99,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ca5.png" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Conjunto Calça e blusa feminino</p>
                     <p class="text-center">R$ 129,90</p>
