--- a/html/masculino.html
+++ b/html/masculino.html
@@ -102,28 +102,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Calvin Klein</h1>
+            <h1 class="text-center mt-5 text">Calvin Klein</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ck1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Camiseta Preta CK</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ck2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Camiseta Azul CL</p>
                     <p class="text-center">R$ 79,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ck3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit 2 cuecas CK</p>
                     <p class="text-center">R$ 69,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ck4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Tênis Confort CK</p>
                     <p class="text-center">R$ 229,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/ck5.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Moleton Preto CK</p>
                     <p class="text-center">R$ 89,90</p>
@@ -135,28 +135,28 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Tommy Hilfiger</h1>
+            <h1 class="text-center mt-5 text">Tommy Hilfiger</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/tommy1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Óculos</p>
                     <p class="text-center">R$ 429,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/tommy2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Perfume cheiroso</p>
                     <p class="text-center">R$ 589,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/tommy3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Blusa Preta</p>
                     <p class="text-center">R$ 139,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/tommy4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Carteira</p>
                     <p class="text-center">R$ 129,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/tommy5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Moleton Cinza</p>
                     <p class="text-center">R$ 269,90</p>
@@ -167,28 +167,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Nike</h1>
+            <h1 class="text-center mt-5 text">Nike</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/nike1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Mochila Preta</p>
                     <p class="text-center">R$ 199,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/nike2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Camiseta Branca</p>
                     <p class="text-center">R$ 169,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/nike3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Tênis Air Force branco</p>
                     <p class="text-center">R$ 449,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/nike4.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Tênis Air Max</p>
                     <p class="text-center">R$ 699,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/nike5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Chinelo slide</p>
                     <p class="text-center">R$ 129,90</p>
