--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,6 @@
 <body>
     <header>
       <nav class="navbar navbar-light navbar-custom nav">
-        <!-- <img src="../images/cartas.png"> -->
         <div class="container-fluid justify-content-center">
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="O que você procura" aria-label="Search">
@@ -90,7 +89,7 @@
                     <img src="../images/banner2.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/banner03.png" class="d-block w-100" alt="...">
+                    <img src="../images/banner.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -105,7 +104,7 @@
             </div>
         </section>
         <section> 
-          <h2 class="text-center mt-5 text">Ofertas do dia! <i class="bi bi-bag-heart"></i></h2>
+          <h2 class="text-center mt-5 mb-1 text">Ofertas do dia! <i class="bi bi-bag-heart"></i></h2>
           <div class="container">
             <div class="row mulher">
               <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
@@ -166,7 +165,7 @@
         </section>
 
         <section> 
-          <h2 class="text-center mt-5 text">UM CARROSSEL DE ELEGÂNCIA PARA AS MULHERES </h2>
+          <h2 class="text-center mt-5 mb-5 text">Um carrossel de elegância para as mulheres </h2>
           <div class="container">
             <div class="row mulher">
               <div class="col-sm-6 col-md-4 col-lg-2 mb-3">
@@ -276,7 +275,7 @@
         </section> -->
 
         <section> 
-            <h2 class="text-center mt-4">Compre por Categoria</h2>
+            <h2 class="text-center mt-4 mb-4 text">Compre por Categoria</h2>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                   <div class="col-md-3">
@@ -291,7 +290,7 @@
                     <div class="card">
                       <img src="../images/2.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Acessórios</h5>
                       </div>
                     </div>
                   </div>
@@ -299,7 +298,7 @@
                     <div class="card">
                       <img src="../images/mac.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Maquiagem</h5>
                       </div>
                     </div>
                   </div>
@@ -307,7 +306,7 @@
                     <div class="card">
                       <img src="../images/4.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Roupa feminina</h5>
                       </div>
                     </div>
                   </div>
@@ -315,7 +314,7 @@
                     <div class="card">
                       <img src="../images/5.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Roupa masculina</h5>
                       </div>
                     </div>
                   </div>
@@ -323,7 +322,7 @@
                     <div class="card">
                       <img src="../images/6.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Calçados</h5>
                       </div>
                     </div>
                   </div>
@@ -332,7 +331,7 @@
                     <div class="card">
                       <img src="../images/7.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Materiais escolares</h5>
                       </div>
                     </div>
                   </div>
@@ -341,7 +340,7 @@
                     <div class="card">
                       <img src="../images/8.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Perfumaria</h5>
                       </div>
                     </div>
                   </div>
