--- a/html/perfumaria.html
+++ b/html/perfumaria.html
@@ -76,7 +76,7 @@
   <main>
     <section>
       <div class="container">
-         <h2 class="text-center mt-4">Perfumaria</h2>
+         <h2 class="text-center mt-4 mb-4 text-per">Perfumaria</h2>
          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -86,7 +86,7 @@
                 <img src="../images/boticario.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../images/Carmen-steffens.png" class="d-block w-100" alt="...">
+                <img src="../images/carmen.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -102,28 +102,28 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5"> Carolina Herrera</h1>
+            <h1 class="text-center mt-5 mb-2 text"> Carolina Herrera</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/212.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 VIP</p>
                     <p class="text-center">R$ 669,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/CH.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Good Girl </p>
                     <p class="text-center">R$ 688,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/212rose.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 Vip-Rose</p>
                     <p class="text-center">R$ 599,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/212red.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212 Vip-Red</p>
                     <p class="text-center">R$ 329,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/212multicor.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">212-Vip Party Fever</p>
                     <p class="text-center">R$ 469,90</p>
@@ -135,28 +135,28 @@
     
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">O Boticário</h1>
+            <h1 class="text-center mt-5 mb-2 text">O Boticário</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bo1.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Egeo Dolce</p>
                     <p class="text-center">R$ 129,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bo2.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Kit elysee blanc</p>
                     <p class="text-center">R$ 329,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bo3.jpg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Florata Red</p>
                     <p class="text-center">R$ 89,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bo4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Coffe Luck</p>
                     <p class="text-center">R$ 159,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/bo5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Malbec</p>
                     <p class="text-center">R$ 189,90</p>
@@ -167,33 +167,42 @@
     </section>
     <section>
         <div class="container">
-            <h1 class="text-center mt-5">Christian Dior</h1>
+            <h1 class="text-center mt-5 mb-2 text">Christian Dior</h1>
             <div class="row text-center image">
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/dior1.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Rosa</p>
                     <p class="text-center">R$ 899,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/dior2.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Rosa Ciclete</p>
                     <p class="text-center">R$ 857,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/dior3.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Jadore</p>
                     <p class="text-center">R$ 959,90</p>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/dior4.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Miss Dior Amarelo</p>
                     <p class="text-center">R$ 879,90</p></div>
-                <div class="col-md-2">
+                <div class="col-md-2 card">
                     <img src="../images/dior5.jpeg" class="d-block img-fluid align-self-center" alt="..." style="width: 150px; height: 150px;">
                     <p class="text-center">Hipnotic</p>
                     <p class="text-center">R$ 679,90</p>
                 </div>
             </div>
+            <nav aria-label="Page navigation example">
+              <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Anterior</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Próximo</a></li>
+              </ul>
+            </nav>
         </div>
     </section>
     <footer>
